Prevent content overlap (#161)

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -720,7 +720,7 @@ body {
   overflow-x: auto;
   width: 100%;
   height: 100%;
-  padding: 1rem 0.5rem;
+  padding: 1.5rem 0.5rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
 }
@@ -738,7 +738,7 @@ body {
 .doc .listingblock .code-inset[data-lang]::before {
   /* opacity: 0.9; */
   content: attr(data-lang);
-  display: none;
+  /* display: none; */
   /* color: var(--pre-annotation-font-color); */
   font-size: calc(12.5 / var(--rem-base) * 1rem);
   font-family: var(--monospace-font-family);
@@ -746,12 +746,16 @@ body {
   line-height: 1;
   text-transform: uppercase;
   position: absolute;
-  top: 1.25rem;
+  top: 0.5rem;
   right: 1.5rem;
   margin-right: 0.25rem;
 }
 
-.doc .listingblock:hover .code-inset[data-lang]::before {
+.doc .listingblock .code-inset {
+  display: none;
+}
+
+.doc .listingblock:hover .code-inset {
   display: block;
 }
 
